Update Posts “2021-09-16-test”

--- a/_posts/2021-09-16-test.md
+++ b/_posts/2021-09-16-test.md
@@ -1,6 +1,7 @@
 ---
 layout: default
-title: Test
-desc: Test
+title: This is a test post
+desc: Trying out my new Jekyll CMS
 ---
-Test
+## Hello Netlify!
+This is so cool.
