Update Posts “2021-09-16-test”

--- a/_posts/2021-09-16-test.md
+++ b/_posts/2021-09-16-test.md
@@ -7,4 +7,4 @@ desc: Trying out my new Jekyll CMS
 This is so cool.
 
 Trying out an image
-![screenshot](assets/img/uploads/screen-shot-2021-09-06-at-10.32.47-pm.png)
+![journal cover](assets/img/uploads/journalcover.jpg)
